--- a/Covid19AppProject2/app/src/main/res/values/colors.xml
+++ b/Covid19AppProject2/app/src/main/res/values/colors.xml
@@ -6,5 +6,10 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="gray_cc">#cccccc</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_red">#FA4343</color>
+    <color name="red_pink">#D13B52</color>
+    <color name="custom_black">#1B1A1A</color>
+    <color name="transfer">#00000000</color>
 </resources>
