add Summary, Precaution Menu
- 개요, 예방수칙 메뉴 추가

< 리팩토링 사항 >
- 나열 식 코드 -> 메소드 추출
- findViewById -> view Binding
- Activity -> Fragment
- 기존 LinearLayout 형식 -> ConstraintLayout

--- a/Covid19AppProject2/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/Covid19AppProject2/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -15,6 +15,6 @@
 
     <item android:id="@+id/precaution"
         android:icon="@drawable/soap"
-        android:title="예방"/>
+        android:title="예방수칙"/>
 
 </menu>
