--- a/Covid19AppProject2/app/src/main/res/layout/fragment_summary.xml
+++ b/Covid19AppProject2/app/src/main/res/layout/fragment_summary.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="15dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -12,7 +13,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/button1"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:stretchColumns="1">
@@ -103,9 +104,8 @@
     </TableLayout>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:layout_marginTop="10dp"
-        android:paddingVertical="20dp"
-        android:paddingHorizontal="30dp"
+        android:layout_marginTop="20dp"
+        android:padding="20dp"
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -113,12 +113,12 @@
         app:layout_constraintEnd_toStartOf="@+id/button2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/text1"
+        android:layout_marginStart="15dp"
         app:layout_constraintTop_toBottomOf="@+id/summary_table_layout"
         android:text="코로나19검사"/>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:paddingVertical="20dp"
-        android:paddingHorizontal="30dp"
+        android:padding="20dp"
         android:layout_width="wrap_content"
         android:id="@+id/button2"
         android:background="@drawable/red_border"
@@ -129,13 +129,13 @@
         android:text="재택치료"/>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:paddingVertical="20dp"
-        android:paddingHorizontal="30dp"
+        android:padding="20dp"
         android:id="@+id/button3"
         android:background="@drawable/red_border"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="15dp"
         app:layout_constraintStart_toEndOf="@+id/button2"
         app:layout_constraintTop_toTopOf="@+id/button2"
         android:text="코로나19브리핑"/>
@@ -148,7 +148,7 @@
         android:id="@+id/text1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="25dp"
+        android:padding="15dp"
         android:text="코로나19 감염이 의심되면 즉시 보건소 및 콜센터(전화 1339)에 신고바랍니다."
         android:textStyle="bold"
         tools:ignore="HardcodedText" />
@@ -159,10 +159,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text1"
         android:id="@+id/source"
+        android:padding="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-30dp"
-        android:padding="25dp"
         android:text="출처      중앙재난안전대책본부, 중앙사고수습본부, \n              중앙방역대책본부, Johns Hopkins CSSE"
         android:textStyle="bold"
         tools:ignore="HardcodedText" />
