--- a/Covid19AppProject2/app/src/main/res/values/themes.xml
+++ b/Covid19AppProject2/app/src/main/res/values/themes.xml
@@ -1,18 +1,17 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Covid19AppProject2" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Covid19AppProject2" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/light_red</item>
         <item name="colorPrimaryVariant">@color/light_red</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">#132EC2</item>
+        <item name="colorSecondaryVariant">#5E74ED</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/transfer</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/gray_cc</item>
         <!-- Customize your theme here. -->
         <item name="android:windowLightStatusBar" tools:ignore="NewApi">true</item>
     </style>
-    <style name="Theme.PracticeProject.NoActionBar" parent="Theme.MaterialComponents.DayNight.NoActionBar"/>
 </resources>
