국내현황, 선별진료소 메뉴
- 전체적인 ui 세팅 완료

< 이후 남은 것 >
- 데이터 불러와 현황별 chart 그리기
- 내 위치 기준 선별진료소 리스트 가져오기

--- a/Covid19AppProject2/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/Covid19AppProject2/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -5,9 +5,9 @@
         android:icon="@drawable/covid"
         android:title="개요"/>
 
-    <item android:id="@+id/New"
+    <item android:id="@+id/domestic_status"
         android:icon="@drawable/newperson"
-        android:title="신규확진"/>
+        android:title="국내현황"/>
 
     <item android:id="@+id/clinic"
         android:icon="@drawable/placeholder"
