--- a/Covid19AppProject2/app/src/main/res/values/colors.xml
+++ b/Covid19AppProject2/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="red_pink">#D13B52</color>
     <color name="custom_black">#1B1A1A</color>
     <color name="transfer">#00000000</color>
+    <color name="dark_blue">#1C2035</color>
 </resources>
