--- a/Covid19AppProject2/app/src/main/res/layout/fragment_status.xml
+++ b/Covid19AppProject2/app/src/main/res/layout/fragment_status.xml
@@ -213,5 +213,15 @@
         app:layout_constraintTop_toBottomOf="@id/linearlayout3"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/linearlayout3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"
+        tools:visibility="visible"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
