--- a/Covid19AppProject2/app/src/main/res/layout/fragment_status.xml
+++ b/Covid19AppProject2/app/src/main/res/layout/fragment_status.xml
@@ -105,7 +105,7 @@
                 android:id="@+id/new_admission"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="신규 입원"
+                android:text="신규입원"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -140,7 +140,7 @@
                 android:id="@+id/death"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="일일 사망"
+                android:text="일일사망"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -213,5 +213,15 @@
         app:layout_constraintTop_toBottomOf="@id/linearlayout3"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/linearlayout3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"
+        tools:visibility="visible"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
