선별진료소 Adapter 생성
선별진료소 리스트, viewPagerItem Adapter 생성

--- a/Covid19AppProject2/app/src/main/res/values/colors.xml
+++ b/Covid19AppProject2/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="gray_cc">#cccccc</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_red">#FA4343</color>
+    <color name="dark_gray">#515151</color>
+    <color name="circle_red">#AA1D1D</color>
     <color name="red_pink">#D13B52</color>
     <color name="custom_black">#1B1A1A</color>
     <color name="transfer">#00000000</color>
