--- a/Covid19AppProject2/app/src/main/res/layout/bottom_sheet.xml
+++ b/Covid19AppProject2/app/src/main/res/layout/bottom_sheet.xml
@@ -21,7 +21,7 @@
         android:layout_height="100dp"
         android:background="@drawable/top_radius_white_background"
         android:gravity="center"
-        android:text="선별진료소 리스트"
+        android:text="▾ 내 주변 선별진료소 ▾"
         android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
