storage 데이터 불러오기
- storage 데이터 불러오기
- Repository, Dao, DB 생성

--- a/Covid19AppProject2/app/src/main/res/values/colors.xml
+++ b/Covid19AppProject2/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="light_red">#FA4343</color>
     <color name="dark_gray">#515151</color>
     <color name="circle_red">#AA1D1D</color>
+    <color name="circle_green">#123314</color>
     <color name="red_pink">#D13B52</color>
     <color name="custom_black">#1B1A1A</color>
     <color name="transfer">#00000000</color>
