--- a/Covid19AppProject2/app/src/main/res/layout/item_clinic_list.xml
+++ b/Covid19AppProject2/app/src/main/res/layout/item_clinic_list.xml
@@ -30,92 +30,141 @@
 
     <LinearLayout
         android:id="@+id/operating_time"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="13dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@+id/address"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/address">
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <TextView
-            android:id="@+id/weekday"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/circle_gray"
-            android:gravity="center"
-            android:textColor="@color/dark_gray"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/address"
-            tools:text="평" />
+            android:paddingVertical="10dp"
+            android:layout_weight="1">
 
-        <TextView
-            android:id="@+id/weekday_time"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/weekday"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/circle_gray"
+                android:gravity="center"
+                android:textColor="@color/dark_gray"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="평" />
+
+            <TextView
+                android:id="@+id/weekday_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:textSize="15sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/weekday"
+                app:layout_constraintStart_toEndOf="@+id/weekday"
+                app:layout_constraintTop_toTopOf="@id/weekday"
+                tools:text="9:00~12:00" />
+
+            <TextView
+                android:id="@+id/sunday"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/circle_red"
+                android:gravity="center"
+                android:textColor="@color/circle_red"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@id/weekday"
+                android:layout_marginTop="5dp"
+                app:layout_constraintTop_toBottomOf="@id/weekday"
+                tools:text="일" />
+
+            <TextView
+                android:id="@+id/sunday_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                app:layout_constraintTop_toTopOf="@id/sunday"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@id/weekday_time"
+                tools:text="9:00~12:00" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="0dp"
+            android:paddingVertical="10dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            app:layout_constraintBottom_toBottomOf="@+id/weekday"
-            app:layout_constraintStart_toEndOf="@+id/weekday"
-            app:layout_constraintTop_toTopOf="@id/weekday"
-            tools:text="9:00~12:00" />
+            android:layout_weight="1">
 
-        <TextView
-            android:id="@+id/saturday"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:layout_marginStart="10dp"
-            android:background="@drawable/circle_blue"
-            android:gravity="center"
-            android:textColor="@color/dark_blue"
-            app:layout_constraintStart_toEndOf="@+id/weekday_time"
-            app:layout_constraintTop_toTopOf="@id/weekday"
-            tools:text="토" />
+            <TextView
+                android:id="@+id/saturday"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:background="@drawable/circle_blue"
+                android:gravity="center"
+                android:textColor="@color/dark_blue"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:text="토" />
 
-        <TextView
-            android:id="@+id/saturday_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            app:layout_constraintBottom_toBottomOf="@+id/saturday"
-            app:layout_constraintStart_toEndOf="@+id/saturday"
-            app:layout_constraintTop_toTopOf="@id/saturday"
-            tools:text="9:00~12:00" />
+            <TextView
+                android:id="@+id/saturday_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:textSize="15sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/saturday"
+                app:layout_constraintTop_toTopOf="@id/saturday"
+                app:layout_constraintStart_toEndOf="@+id/saturday"
+                tools:text="9:00~12:00" />
 
-        <TextView
-            android:id="@+id/holiday"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:background="@drawable/circle_red"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:textColor="@color/circle_red"
-            app:layout_constraintStart_toEndOf="@+id/saturday_time"
-            app:layout_constraintTop_toTopOf="@id/weekday"
-            tools:text="일" />
+            <TextView
+                android:id="@+id/holiday"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:textStyle="bold"
+                android:background="@drawable/circle_green"
+                android:gravity="center"
+                android:textColor="@color/circle_green"
+                app:layout_constraintStart_toStartOf="@+id/saturday"
+               app:layout_constraintTop_toBottomOf="@+id/saturday"
+                tools:text="공" />
 
-        <TextView
-            android:id="@+id/holiday_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            app:layout_constraintBottom_toBottomOf="@+id/holiday"
-            app:layout_constraintStart_toEndOf="@+id/holiday"
-            app:layout_constraintTop_toTopOf="@id/holiday"
-            tools:text="9:00~12:00" />
+            <TextView
+                android:id="@+id/holiday_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/holiday"
+                app:layout_constraintTop_toTopOf="@id/holiday"
+                app:layout_constraintStart_toStartOf="@+id/saturday_time"
+                tools:text="9:00~12:00" />
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
+
 
     <TextView
         android:id="@+id/tele_phone_num"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:textSize="12sp"
+        android:textSize="14sp"
+        android:layout_marginStart="5dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/operating_time"
-        tools:text=" ☎︎ 031-123-1234" />
+        tools:text="☎︎ 031-123-1234" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
