viewPager 연결 성공
- 선별진료소 리스트 viewPager 연결
- 위치 마커 띄우기 성공
- 뷰페이저 이동 시 지도 이동 성공
- 마커 클릭 시 뷰페이저 이동 성공

--- a/Covid19AppProject2/app/src/main/res/layout/fragment_clinic.xml
+++ b/Covid19AppProject2/app/src/main/res/layout/fragment_clinic.xml
@@ -12,11 +12,11 @@
 
     <androidx.viewpager2.widget.ViewPager2
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="140dp"
         android:layout_gravity="bottom"
         android:layout_marginBottom="120dp"
         android:orientation="horizontal"
-        android:id="@+id/houseViewPager"/>
+        android:id="@+id/clinicViewPager"/>
 
     <com.naver.maps.map.widget.LocationButtonView
         android:id="@+id/currentLocationButton"
